* deletion of list elements more smoothly * some layout issues

--- a/Research/KnowWE-Plugin-WissKont/src/main/resources/webapp/KnowWEExtension/css/wisskont.css
+++ b/Research/KnowWE-Plugin-WissKont/src/main/resources/webapp/KnowWEExtension/css/wisskont.css
@@ -120,8 +120,23 @@ cursor: pointer;
 	border-bottom: 1px solid lightgrey;
 	}
 	
+.deletableListElement:hover {
+	display: inline;
+	border: 1px dotted gray;
+    border-radius: 4px 4px 4px 4px;
+    bottom: -1px;
+    left: -1px;
+    padding-right: 1px;
+    padding-left: 1px;
+    right: -15px;
+    text-align: right;
+    top: -1px;	
+}
+
+
 .deletableListElement {
-	display: inline;	
+	display: inline;
+
 }
 
 .narrowCell {
